# bert_pretrainer

./: .gitignore  LICENSE.md  README.md  modeling_bert.py  pretrain.py  pyproject.toml
data/: wikipedia.csv
